<resources>
    <string name="progName">EasyCashAccount Droid</string>
    <string name="progAuthor">Copyright &#x00A9; 2012&#8211;2024 Chien-Hong Chan</string>
    <string name="progEmail">E-mail: woofdogtw@gmail.com</string>
    <string name="progAbout">is a simple cash accounting program.</string>
    <string name="progVersion">Version: </string>
    <string name="progMail">&lt;a href="mailto:woofdogtw@gmail.com"&gt;Mail to me&lt;/a&gt;</string>
    <string name="progWebsite">&lt;a href="https://easy-cash-account.firebaseapp.com/index.html"&gt;Visit to my website&lt;/a&gt;</string>
    <string name="titleDbList">Database List</string>
    <string name="titleUntitled">[Untitled]</string>
    <string name="titleStBudget">Budget Analysis</string>
    <string name="titleStGrandTotal">Grand Total Analysis</string>
    <string name="titleStPercentage">Percentage Analysis</string>
    <string name="titleFind">Find result</string>
    <string name="tabTransTitle">Transactions</string>
    <string name="tabTypeTitle">Transaction Types</string>
    <string name="transIncome">Income</string>
    <string name="transExpense">Expense</string>
    <string name="transBudget">Budget</string>
    <string name="stType">Type</string>
    <string name="stGrandTotal">Grand Total</string>
    <string name="stRemain">Remain</string>
    <string name="stRemainAvg">Avg. remain per day</string>
    <string name="stSum">Sum</string>
    <string name="stPercentage">Percentage</string>
    <string name="mAbout">About</string>
    <string name="mOptions">Options</string>
    <string name="mOptSync">Synchronization</string>
    <string name="mCancel">Cancel</string>
    <string name="mCreate">Create</string>
    <string name="mCreateAs">Create as This</string>
    <string name="mDelete">Delete</string>
    <string name="mModify">Modify</string>
    <string name="mDbSelect">Select Files</string>
    <string name="mDbRestore">Restore</string>
    <string name="mDbRename">Rename File</string>
    <string name="mDbDesc">Edit Description</string>
    <string name="mDbBackup">Backup</string>
    <string name="mTransFind">Find</string>
    <string name="mTransRange">Display Range</string>
    <string name="mTransSt">Statistics</string>
    <string name="mTransStBudget">Budget</string>
    <string name="mTransStGrandTotal">Grand Total</string>
    <string name="mTransStPercentage">Percentage</string>
    <string name="mTransSync">Synchronize</string>
    <string name="mTransSaveAs">Save As</string>
    <string name="mTransImport">Import</string>
    <string name="mTransExportCsv">Export CSV</string>
    <string name="tooltipNavOptSync">Edit synchronization options for the program</string>
    <string name="tooltipNavAbout">Show the application\'s About information</string>
    <string name="tooltipDbSelect">Select multiple files</string>
    <string name="tooltipDbCreate">Create a new database file</string>
    <string name="tooltipDbRestore">Restore database files</string>
    <string name="tooltipDbRename">Rename this database file</string>
    <string name="tooltipDbDesc">Edit the description of this database file</string>
    <string name="tooltipDbDelete">Delete this database file</string>
    <string name="tooltipDbDeleteItems">Delete the selected database files</string>
    <string name="tooltipDbBackup">Backup this database file</string>
    <string name="tooltipDbBackupItems">Backup the selected database files</string>
    <string name="tooltipDbCancel">Cancel selection</string>
    <string name="tooltipTypeCreate">Create a transaction type</string>
    <string name="tooltipTypeDelete">Delete this transaction type</string>
    <string name="tooltipTypeModify">Modify this transaction type</string>
    <string name="tooltipTransCreate">Create a new transaction</string>
    <string name="tooltipTransCreateAs">Create a new transaction as this transaction</string>
    <string name="tooltipTransDelete">Delete this transaction</string>
    <string name="tooltipTransModify">Modify this transaction</string>
    <string name="tooltipTransFind">Find entries using keywords</string>
    <string name="tooltipTransRange">Set date range for displaying</string>
    <string name="tooltipTransSt">Display relationships about income, outgoing and budget</string>
    <string name="tooltipTransStBudget">Calculate the relationship of budget, income, and expenses</string>
    <string name="tooltipTransStGrandTotal">Calculate grand total of income and expenses</string>
    <string name="tooltipTransStPercentage">Calculate percentage by transaction types</string>
    <string name="tooltipTransSync">Synchronize the local database and the network database</string>
    <string name="tooltipTransSaveAs">Save the database under a new file</string>
    <string name="tooltipTransImport">Import supported database content into the current database file</string>
    <string name="tooltipTransExportCsv">Export current database content to a CSV file</string>
    <string name="dErrEmpty">Cannot be empty</string>
    <string name="dErrDbOperation">An error occurred. please try again.</string>
    <string name="dAppUpgradeTitle">Old version database files has been detected</string>
    <string name="dAppUpgradeImport">An old version of the database files has been detected. Do you want to allow automatic import of the database file? This action requires permission to be enabled</string>
    <string name="dAppUpgradeImportSelf">You can use the file restore function in the lower right corner. Turn on \"Show hidden files\" in the file browser, and go to the root directory to find \"databases\" in \"tw.idv.woofdog.easycashaccount\" to select the file you want to restore.</string>
    <string name="dDbTitleCreate">New Database</string>
    <string name="dDbTitleDelete">Delete Database</string>
    <string name="dDbTitleDescript">Database Description</string>
    <string name="dDbTitleRename">Database File Name</string>
    <string name="dDbLabelFileName">Database file name</string>
    <string name="dDbLabelDescript">Database description</string>
    <string name="dDbErrFileExists">File exists!</string>
    <string name="dDbErrFileName">Cannot with \ / : * ? " &lt; &gt; |</string>
    <string name="dDbBackupExists">The database file is exist. Overwrite it using the selected file?</string>
    <string name="dDbDelete">The database file will be removed. Are you sure?</string>
    <string name="dTransTitleCreate">Create Transaction</string>
    <string name="dTransTitleDelete">Delete Transaction</string>
    <string name="dTransTitleModify">Modify Transaction</string>
    <string name="dTransDate">Date</string>
    <string name="dTransType">Type</string>
    <string name="dTransSelType">Select a type</string>
    <string name="dTransInExp">Income/Expense</string>
    <string name="dTransMoney">Money</string>
    <string name="dTransDescript">Description</string>
    <string name="dTransLocation">Location</string>
    <string name="dTransErrMoney">Zero or positive number</string>
    <string name="dTransWarnNoType">You must create a type first.</string>
    <string name="dTypeTitleCreate">Create Transaction Type</string>
    <string name="dTypeTitleDelete">Delete Transaction Type</string>
    <string name="dTypeTitleModify">Modify Transaction Type</string>
    <string name="dTypeLabel">Transaction type name</string>
    <string name="dTypeErrExistCreate">This type name is existing in the list.</string>
    <string name="dTypeErrDelete">You must clear all transactions of this type, or modify types of these transactions.</string>
    <string name="dTypeWarnDeleteSure">The transaction type will be removed. Are you sure?</string>
    <string name="dTypeWarnModifySure">All transactions of this type will be modified to this type. Are you sure?</string>
    <string name="dTypeWarnModifyMerge">This type name is existing in the list. Do you want to merge them?</string>
    <string name="dOptSyncUseNone">Disable</string>
    <string name="dOptSyncUseFtp">Use FTP</string>
    <string name="dOptSyncUseFtps">Use FTPS</string>
    <string name="dOptSyncUseSftp">Use SFTP</string>
    <string name="dOptSyncUseGoogle">Use Google Drive</string>
    <string name="dOptSyncUseMs">Use Microsoft OneDrive</string>
    <string name="dOptSyncLoginRem">Remember login information</string>
    <string name="dOptSyncDir">Database file directory</string>
    <string name="dOptSyncFtpGroup">FTP Settings</string>
    <string name="dOptSyncFtpHost">Host name or IP address</string>
    <string name="dOptSyncFtpPort">Port number</string>
    <string name="dOptSyncFtpUser">User name</string>
    <string name="dOptSyncFtpPass">Password</string>
    <string name="dOptSyncGoogleGroup">Google Drive Settings</string>
    <string name="dOptSyncMsGroup">Microsoft OneDrive Settings</string>
    <string name="dOptSyncErrPortRange">1 ~ 65535</string>
    <string name="dStCalAll">All</string>
    <string name="dStCalRange">Range</string>
    <string name="dFindTitle">Find</string>
    <string name="dFindUseAll">Match all conditions</string>
    <string name="dFindUseAny">Match any one condition</string>
    <string name="dFindFrom">From</string>
    <string name="dFindTo">To</string>
    <string name="dFindErrDate">Wrong date range</string>
    <string name="dFindErrMoney">Wrong money range</string>
    <string name="dSyncTitle">Database Synchronization</string>
    <string name="dSyncStart">Synchronizing database...</string>
    <string name="dSyncDone">Synchronization complete.</string>
    <string name="dSyncCancel">Synchronization cancelled.</string>
    <string name="dSyncErrError">Unknown error.</string>
    <string name="dSyncErrConn">Cannot connect to the remote host.</string>
    <string name="dSyncErrLogin">Login error.</string>
    <string name="dSyncErrUserPass">User name or password error.</string>
    <string name="dSyncErrDir">Cannot find the database directory.</string>
    <string name="dSyncErrGet">Cannot find the database file.</string>
    <string name="dSyncErrPut">Something wrong when sending database.</string>
    <string name="dSyncErrRen">Finalize synchronization error.</string>
    <string name="dSyncWarnOpt">You must enable the remote host settings. Please use \"Menu\" -&gt; \"Synchronization\" to set it up.</string>
    <string name="bCancel">Cancel</string>
    <string name="bMenu">Menu</string>
    <string name="bNo">No</string>
    <string name="bOk">OK</string>
    <string name="bYes">Yes</string>
    <string name="bNoMoreHint">Do not remind again</string>
</resources>