<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/transCreateAsButton"
        android:contentDescription="@string/tooltipTransCreateAs"
        android:icon="@drawable/add"
        android:title="@string/mCreateAs"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="always" />

    <item
        android:id="@+id/transDeleteButton"
        android:contentDescription="@string/tooltipTransDelete"
        android:icon="@drawable/delete"
        android:title="@string/mDelete"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="always" />

    <item
        android:id="@+id/transModifyButton"
        android:contentDescription="@string/tooltipTransModify"
        android:icon="@drawable/edit"
        android:title="@string/mModify"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="always" />
</menu>