<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/allButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dFindUseAll" />

            <RadioButton
                android:id="@+id/anyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dFindUseAny" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/dateCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dTransDate" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dFindFrom" />

        <DatePicker
            android:id="@+id/fromDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dFindTo" />

        <DatePicker
            android:id="@+id/toDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            tools:ignore="UnusedAttribute" />

        <CheckBox
            android:id="@+id/typeCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dTransType" />

        <EditText
            android:id="@+id/typeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <CheckBox
            android:id="@+id/inExpCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dTransInExp" />

        <Spinner android:id="@+id/inExpSpinner" />

        <CheckBox
            android:id="@+id/moneyCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dTransMoney" />

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dFindFrom" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dFindTo" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/fromMoneyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal|numberSigned" />

            <EditText
                android:id="@+id/toMoneyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal|numberSigned" />
        </TableRow>

        <CheckBox
            android:id="@+id/descriptCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dTransDescript" />

        <EditText
            android:id="@+id/descriptEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <CheckBox
            android:id="@+id/locationCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dTransLocation" />

        <EditText
            android:id="@+id/locationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </TableLayout>
</ScrollView>